--- a/Freshly/Freshly.csproj
+++ b/Freshly/Freshly.csproj
@@ -10,7 +10,8 @@
     <RepositoryUrl>https://www.github.com/stonypeterz/freshly</RepositoryUrl>
     <PackageIconUrl>https://www.stonypeterz.com/Logo48x48.ico</PackageIconUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.4</Version>
+    <Version>1.0.5</Version>
+    <Copyright />
   </PropertyGroup>
 
   <ItemGroup>
