--- a/Freshly.UI/appsettings.json
+++ b/Freshly.UI/appsettings.json
@@ -13,7 +13,7 @@
     "PageSize": 10
   },
   "ConnectionStrings": {
-    "ConnStr": "Server=.;Initial Catalog=FreshlyInit;Integrated Security=True;"
+    "ConnStr": "Server=.;Initial Catalog=FreshlyInit2;Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
